<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="unoesc.edu.br.achadoperdido.achado.AchadoCadActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/achado_cad_tvData"
            android:hint="@string/achado_cad_edtData">
        </TextView>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/achado_cad_edtCategoria"
            android:hint="@string/achado_cad_edtCategoria">
        </EditText>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/achado_cad_edtDescricao"
            android:hint="@string/achado_cad_edtDescricao">
        </EditText>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/achado_cad_edtContato"
            android:hint="@string/achado_cad_edtContato">
        </EditText>
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/achado_cad_ivFoto"
        android:onClick="capturarFoto"
        android:src="@drawable/ic_camera_alt_36pt_2x"/>

    <Button
        android:layout_marginTop="50dp"
        android:text="@string/achado_cad_btnSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/achado_cad_btnSalvar" />


</LinearLayout>

